Fixing horizontal line on mobile - specifying background size on gradient text

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -185,8 +185,7 @@ body {
 .home {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  background-size: 100%; }
+  transform: translateY(-50%); }
   @media (min-width: 56.25em) {
     .home {
       left: 50%;
@@ -206,7 +205,8 @@ body {
   .home-headline {
     font-size: 2.5rem; }
     .home-headline--gradient {
-      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
+      background: linear-gradient(to top right, #7934fa 50%, #459bdb 100%);
+      background-size: 100% auto;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent; }
     @media (min-width: 56.25em) {
